# life-os

./: .dockerignore  .gitignore  .importlinter  CLAUDE.md  README.md  compose.yaml  pyproject.toml
.claude/agents/: pr-reviewer.md  slide-content-planner.md  slide-deck-builder.md  slide-html-renderer.md  slide-pptx-builder.md  slide-pptx-visual-loop.md  snowpro-question-author.md
.claude/commands/: evolve.md  instinct-status.md  learn.md
.claude/rule/: README.md  directory-structure.md  documentation.md  maintenance.md  naming.md
.claude/skills/cc-launch/: SKILL.md
.claude/skills/cert-question-authoring/: SKILL.md
.claude/skills/close-task/: SKILL.md
.claude/skills/code-review-architecture/: SKILL.md
.claude/skills/code-review-general/: SKILL.md
.claude/skills/code-review-python/: SKILL.md
.claude/skills/continuous-learning/: SKILL.md
.claude/skills/create-issue/: SKILL.md
.claude/skills/directory-keeper/: SKILL.md
.claude/skills/domain-scaffold/: SKILL.md
.claude/skills/english-translate/: SKILL.md
.claude/skills/issue-loop/: SKILL.md
.claude/skills/issue-memory/: SKILL.md
.claude/skills/review-and-merge-pr/: SKILL.md
.claude/skills/slide-expression/: SKILL.md
.claude/skills/slide-pptx/: SKILL.md
.claude/skills/slide-structure/: SKILL.md
.claude/skills/slide-visual-qa/: SKILL.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: investigation.md  product-backlog.md  task.md
.github/skills/create-issue/: SKILL.md
.github/workflows/: ci.yml
content-sales/: README.md  pyproject.toml
content-sales/src/content_sales/: __init__.py  public.py
content-sales/src/content_sales/domain/: __init__.py
content-sales/tests/: test_content_sales.py
docker/: Dockerfile  Dockerfile.certification  Dockerfile.pptx-convert
docs/adr/: 0001-claude-code-native-multi-session.md  0002-modular-monolith-bounded-context.md  0003-presentation-system.md  0004-docker-test-environment.md  0004-pr-review-agent.md  0005-directory-governance-daily-keeper.md  0005-docker-test-environment.md  0006-docker-test-environment.md  0007-pptx-output.md  0008-group-domains-under-domains-dir.md  0008-pr-auto-merge-scope-gate.md  0009-group-domains-under-domains-dir.md  0010-cc-launch-skill-and-issue-memory.md  0010-continuous-learning-instinct-based.md  0011-certification-react-frontend-serverless.md  0012-certification-question-authoring-system.md  README.md  template.md
docs/ai/: continuous-learning.md
domains/certification/: README.md  pyproject.toml
domains/certification/data/: snowpro_core.json
domains/certification/frontend/: index.html  package-lock.json  package.json  vite.config.js
domains/certification/frontend/src/: App.jsx  api.js  styles.css
domains/certification/frontend/src/components/: CertificationSelect.jsx  Login.jsx  ModeSelect.jsx  QuestionBank.jsx  Quiz.jsx
domains/certification/infra/: .gitignore  README.md  build_lambda.sh  deploy.sh  main.tf  outputs.tf  variables.tf
domains/certification/src/certification/: __init__.py  public.py
domains/certification/src/certification/adapters/: __init__.py  api.py  dynamo_repository.py  lambda_handler.py  repository.py  security.py
domains/certification/src/certification/application/: __init__.py  auth.py  ports.py  question_bank.py  quiz_service.py
domains/certification/src/certification/domain/: __init__.py  models.py  quiz.py  scoring.py
domains/certification/tests/: test_certification.py  test_data_integrity.py
domains/content-sales/: README.md
domains/english/: README.md
domains/english/data/: vocabulary.md
domains/media/: README.md  pyproject.toml
domains/presentation/: README.md  pyproject.toml
domains/presentation/decks/ai-driven-handson/: ai-driven-handson.pptx  outline.yml
domains/presentation/decks/claude-code-security/: index.html  outline.yml
domains/presentation/src/presentation/: __init__.py  public.py
domains/presentation/templates/: theme-tokens.yml
domains/presentation/tests/: test_presentation.py
domains/task/: README.md
domains/tools/: README.md  pyproject.toml
domains/tools/test/: test_csv_splitter.py
domains/travel/: README.md
english/: README.md  pyproject.toml
english/data/: expressions.md
english/src/english/: index.py  models.py  public.py
english/tests/: test_english.py
guides/development-policy/: code-review-rules.md  issue-operation-rules.md  loop-engineering.md
media/: README.md
media/src/media/: index.py  models.py
media/tests/: test_media.py
presentation/: README.md
presentation/decks/ai-driven-handson/: index.html  outline.yml
presentation/decks/deckgen-chart-demo/: outline.yml
presentation/templates/: base.css.md
rule/: README.md  directory-structure.md  documentation.md  maintenance.md  naming.md
scripts/: .gitkeep  cc-daemon.sh  cc-launch.sh  cc-queue.sh  cc-run.sh  cc-status.py  cc-status.sh  check_structure.py  create_worktree.sh  delete_worktree.sh  generate_doc_graph.py  generate_snowflake_keypair.sh  setup-github-labels.sh
scripts/deckgen/: README.md  pyproject.toml
scripts/deckgen/src/deckgen/: __init__.py  __main__.py  builder.py  layout.py  loader.py  qa.py  theme.py
scripts/deckgen/src/deckgen/expressions/: __init__.py  bullet.py  chart.py  comparison.py  emphasis.py  flow.py  structure.py  title.py
scripts/deckgen/templates/: sample-brand.pptx
scripts/deckgen/tests/: test_builder.py  test_qa.py  test_theme.py
scripts/deckgen/tools/: make_brand_template.py  pptx_to_png.sh
shared/: README.md  pyproject.toml
shared/src/shared/: __init__.py  ids.py  result.py  time.py
task/: README.md  pyproject.toml
task/src/task/: __init__.py  public.py
task/src/task/adapters/: __init__.py  cli.py  repository.py
task/src/task/application/: __init__.py
task/src/task/domain/: __init__.py
task/tests/: test_task.py
travel/: README.md  pyproject.toml
travel/src/travel/: __init__.py  index.py  models.py
travel/tests/: test_travel.py
(+19 files in other folders)
