# life-os — uv workspace ルート
# 設計根拠: docs/adr/0002-modular-monolith-bounded-context.md
#
# 各領域（Bounded Context）を workspace メンバーとして分割管理する。
# 領域間の依存は各領域の public.py 経由のみ。境界は .importlinter で強制する。

[project]
name = "life-os"
version = "0.0.0"
description = "個人のためのなんでも環境（personal life operating system）"
requires-python = ">=3.12"
# ルート自体はコードを持たない調整役。実体は各領域パッケージ side にある。
dependencies = [
    "shared",
    "task",
    "content-sales",
    "media",
    "travel",
]

[tool.uv.workspace]
members = ["shared", "task", "content-sales", "media", "travel"]

[tool.uv.sources]
shared = { workspace = true }
task = { workspace = true }
content-sales = { workspace = true }
media = { workspace = true }
travel = { workspace = true }

[dependency-groups]
dev = [
    "import-linter>=2.0",
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# ルートはパッケージを同梱しない（メンバーが実体）
bypass-selection = true
