# life-os — uv workspace ルート
# 設計根拠: docs/adr/0002-modular-monolith-bounded-context.md
#
# 各領域（Bounded Context）を workspace メンバーとして分割管理する。
# 領域は domains/ 配下にまとめる（shared は Shared Kernel としてルート直下）。
# 領域間の依存は各領域の public.py 経由のみ。境界は .importlinter で強制する。

[project]
name = "life-os"
version = "0.0.0"
description = "個人のためのなんでも環境（personal life operating system）"
requires-python = ">=3.12"
# ルート自体はコードを持たない調整役。実体は各領域パッケージ side にある。
dependencies = [
    "shared",
    "task",
    "content-sales",
    "media",
    "travel",
    "english",
    "presentation",
    "tools",
]

[tool.uv.workspace]
members = ["shared", "domains/task", "domains/content-sales", "domains/media", "domains/travel", "domains/english", "domains/presentation", "domains/tools"]

[tool.uv.sources]
shared = { workspace = true }
task = { workspace = true }
content-sales = { workspace = true }
media = { workspace = true }
travel = { workspace = true }
english = { workspace = true }
presentation = { workspace = true }
tools = { workspace = true }

[dependency-groups]
dev = [
    "import-linter>=2.0",
    "pytest>=8.0",
]

[tool.pytest.ini_options]
# workspace のスモークテストは各領域(member)のみ対象。
# scripts/deckgen は member 外の支援ツールで独自依存(python-pptx)を持つため除外し、
# `uv run --directory scripts/deckgen pytest` で個別に検証する（docs/adr/0007）。
# 注: --project ではなく --directory を使う。--project だと rootdir がこの設定になり
#     scripts/deckgen が ignore されて deckgen のテストが収集されない。
addopts = "--ignore=scripts/deckgen"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# ルートはパッケージを同梱しない（メンバーが実体）
bypass-selection = true
