[project]
name = "content-sales"
version = "0.0.0"
description = "販売管理（Bounded Context / アーキタイプA: 軽量ヘキサゴナル）"
requires-python = ">=3.12"
dependencies = ["shared"]

[tool.uv.sources]
shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/content_sales"]
