[project]
name = "english"
version = "0.0.0"
description = "英語学習（Bounded Context / アーキタイプB: 薄い構成）"
requires-python = ">=3.12"
dependencies = ["shared"]

[tool.uv.sources]
shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/english"]
