[project]
name = "presentation"
version = "0.0.0"
description = "プレゼン作成（Bounded Context / アーキタイプB: 薄い構成）"
requires-python = ">=3.12"
dependencies = ["shared"]

[tool.uv.sources]
shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/presentation"]
